--- a/core/progettazione_vista.tex
+++ b/core/progettazione_vista.tex
@@ -1,4 +1,4 @@
-\subsection{GUI}
+\subsection{Vista}
 La grafica del gioco si compone di 4 \textit{frame} principali:
 \begin{itemize}
 	\item il \textit{main frame}: è il frame principale che parte all'avvio del
@@ -14,6 +14,8 @@ La grafica del gioco si compone di 4 \textit{frame} principali:
 	completata la registrazione e permette all'utente di giocare.
 \end{itemize}
 
+
+
 \subsubsection{Main Frame}
 \label{subsubsection:progettazione_main_frame}
 Questo frame si compone semplicemente di due radio button che permettono di
@@ -21,6 +23,8 @@ scegliere la modalità nella quale avviare il gioco. La modalità di default è
 quella che permette di far partire il programma come client. Una volta
 effettuata la scelta sarà sufficiente confermare l'azione premendo sul bottone
 ``Ok''.
+
+
 
 \subsubsection{Lobby Frame}
 \label{subsubsection:progettazione_lobby_frame}
@@ -35,6 +39,8 @@ che ospita, al centro, una tabella che elenca tutti gli host (client) che via
 via si connettono alla lobby. A discrezione dell'utente, tramite la pressione
 del bottone ``Start'', saràpossibile chiudere le registrazioni ed avviare il
 gioco.
+
+
 
 \subsubsection{Registration Frame}
 \label{subsubsection:progettazione_registration_frame}
@@ -60,6 +66,8 @@ del gioco.\newline
 Come è possibile intuire, il frame per la registrazione serve a raccogliere
 tutte le informazioni necessarie al gioco e a comunicare il proprio indirizzo
 ip ed username del giocatore alla lobby (entry point).
+
+
 
 \subsubsection{Game Frame}
 \label{subsubsection:progettazione_game_frame}
