--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,12 @@
 \documentclass[a4paper,10pt]{scrartcl}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
+
 \usepackage{hyperref}
+
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 
 
 
