--- a/core/implementazione_vista.tex
+++ b/core/implementazione_vista.tex
@@ -47,10 +47,19 @@ notifca il \textit{Main}.
 
 \subsubsection{Lobby Frame}
 \begin{figure}[!h]
-	\centering
-	\includegraphics[scale=0.5]{core/imgs/gui/lobby_frame}
-	\caption{Lobby Frame}
-	\label{figure:lobby_frame}
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[scale=0.4]{core/imgs/gui/lobby_frame}
+		\caption{Lobby Frame}
+		\label{figure:lobby_frame}
+	\end{subfigure}
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[scale=0.3]{core/imgs/gui/registration_frame}
+		\caption{Registration Frame}
+		\label{figure:registration_frame}
+	\end{subfigure}
+	\caption{}
 \end{figure}
 Il \textit{LobbyFrame} si compone di 3 pannelli così come pianificato in fase di
 progettazione (Sezione~\ref{subsubsection:progettazione_lobby_frame}):
@@ -77,12 +86,6 @@ quando visualizzare il secondo pannello.
 
 
 \subsubsection{Registration Frame}
-\begin{figure}[!h]
-	\centering
-	\includegraphics[scale=0.4]{core/imgs/gui/registration_frame}
-	\caption{Registration Frame}
-	\label{figure:registration_frame}
-\end{figure}
 Il \textit{RegistrationFrame} si compone di 7 pannelli così come descritto in
 Sezione~\ref{subsubsection:progettazione_registration_frame}.\newline
 Il comportamento di questo frame è del tutto simile a quello del LobbyFrame: gli
