introduzione ri-sistemata

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,13 @@
 \usepackage[italian]{babel}
 
 \usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=red,
+	citecolor=red,
+	filecolor=red,
+	urlcolor=red
+}
 
 \usepackage{graphicx}
 \usepackage{caption}
@@ -20,7 +27,12 @@
 
 % abstract
 \begin{abstract}
-
+RIGA 1\newline
+RIGA 2\newline
+RIGA 3\newline
+RIGA 4\newline
+RIGA 5\newline
+RIGA 6
 \end{abstract}
 
 % sections
@@ -33,7 +45,7 @@
 \input{core/progettazione_comunicazione}
 
 \section{Aspetti Implementativi}
-\input{core/implementazione}
+\input{core/implementazione}%\input{core/implementazione_modello}
 %\input{core/implementazione_modello}
 \input{core/implementazione_vista}
 \input{core/implementazione_comunicazione}
