modificato un po' tutto per far si che rientrasse nelle 12pg.. YO!

--- a/core/implementazione.tex
+++ b/core/implementazione.tex
@@ -1,8 +1,7 @@
 Per l'implementazione del progetto si è scelto di utilizzare il linguaggio 
 di programmazione basato sugli oggetti Java, che tramite il framework RMI 
 fornisce API specificamente progettate per consentire la realizzazione di 
-applicazioni distribuite in modo efficace. Per quanto riguarda l'interfaccia 
-grafica, si è utilizzata la libreria di Java Swing.
+applicazioni distribuite in modo efficace.
 \\
 Il software è stato implementato secondo il pattern architetturale \textbf{MVC},
 anche noto come \textbf{Model-View-Controller}, il quale permette di creare una
