--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 
+\usepackage[export]{adjustbox}[2011/08/13]
+
 
 
 \begin{document}
@@ -53,30 +55,5 @@ RIGA 6
 \section{Valutazione e Conclusioni}
 \input{core/valutazione}
 
-\newpage
-
-% images
-\section{Appendice}
-
-\begin{figure}[!ht]
-    \centering
-\includegraphics[width=1.0\textwidth]{core/imgs/UML/LobbyCommunicationUML-noattr.png}
-    \caption{Diagramma delle classi, lobby server}
-    \label{fig:classlobby}
-\end{figure}
-
-\begin{figure}[!ht]
-    \centering
-\includegraphics[width=1.0\textwidth]{core/imgs/UML/RegistrationBattlesheepCommunicationUML-noattr.png}
-    \caption{Diagramma delle classi, discovery e registration lato client}
-    \label{fig:classlobbyclientside}
-\end{figure}
-
-\begin{figure}[!ht]
-    \centering
-\includegraphics[width=1.0\textwidth]{core/imgs/UML/GameBattlesheepCommunicationUML-noattr.png}
-    \caption{Diagramma delle classi, comunicazione fra client}
-    \label{fig:classgame}
-\end{figure}
 
 \end{document}
