--- a/core/progettazione_vista.tex
+++ b/core/progettazione_vista.tex
@@ -1,10 +1,10 @@
 \subsection{Vista}
 
 
-Dal punto di vista della interfaccia esposta all’utente, il gioco si biforca a seconda che
+Dal punto di vista dell'interfaccia esposta all’utente, il gioco si biforca a seconda che
 si avvii il lobby server o il client. Nel caso del server, all’amministratore della stanza
 viene fornito un pannello che consente l’avvio della partita a sua discrezione. Vengono
-inoltre visualizzati username ed IP di tutti i client.
+inoltre visualizzati username, IP e porta di tutti i client.
 Nel caso del gioco vero e proprio, viene dapprima richiesto all’utente a quale stanza
 desideri unirsi (la scelta viene semplificata mostrando una lista di server correntemente attivi).
 Proseguendo è stata inserita una animazione che, ironicamente, fa intuire il motivo del nome del gioco.
@@ -13,9 +13,9 @@ proprio campo di battaglia. Il client mostra dunque una schermata di attesa, pri
 che la lobby gli comunichi i partecipanti e la partita possa iniziare.
 Vi è infine la schermata di gioco, che consente all’utente di specificare la posizione e
 il giocatore da attaccare. Essa fornisce inoltre uno storico delle mosse effettuate da
-tutti gli utenti. È inoltre presente una visualizzazione in forma di griglia del campo
+tutti gli utenti. È inoltre presente una visualizzazione in forma di griglia del campo
 di gioco di tutti i giocatori e del proprio, completo di informazioni su quali celle siano
-state colpite e quali contenessero pecore. Un ulteriore aspetto visuale è la gestione
+state colpite e quali contenessero pecore. Un ulteriore aspetto visuale è la gestione
 di informazioni riguardanti i giocatori che hanno perso e quelli che hanno subito un
 crash e sono pertanto usciti dalla partita. Sono infine visualizzate le informazioni sul
 piazzamento quando si perde o finisce la partita.
