--- a/core/valutazione.tex
+++ b/core/valutazione.tex
@@ -21,6 +21,5 @@ qualsiasi nuovo gioco a turni.
 Per aumentare la godibilità del gioco si potrebbe infine imporre al giocatore 
 di inserire le pecore sul campo di gioco in celle contigue, in modo analogo a 
 quanto avviene nella battaglia navale tradizionale. In questo modo ciascun 
-attacco che ha avuto successo causerà una ricerca delle pecore del blocco 
-rimanenti nelle celle adiacenti, migliorando la godibilità complessiva del 
-gioco.
+attacco che ha avuto successo causerà una ricerca delle pecore rimanenti nelle celle adiacenti,
+migliorando la gradevolezza complessiva del gioco.
