--- a/main.tex
+++ b/main.tex
@@ -29,12 +29,12 @@
 
 % abstract
 \begin{abstract}
-RIGA 1\newline
-RIGA 2\newline
-RIGA 3\newline
-RIGA 4\newline
-RIGA 5\newline
-RIGA 6
+In questa relazione tratteremo la realizzazione di una versione della battaglia
+navale multigiocatore. Per estendere il gioco nella sua versione tradizionale si sono rese
+necessarie delle modifiche alle sue regole. 
+Tale sistema dovrà risultare distribuito, con particolare attenzione
+alla tolleranza ai guasti di tipo crash sui nodi, che dovranno essere gestiti
+in modo appropriato per non compromettere la partita.
 \end{abstract}
 
 % sections
