--- a/core/implementazione_vista.tex
+++ b/core/implementazione_vista.tex
@@ -1,35 +1,27 @@
 \subsection{Vista}
 Le classi della vista sono state implementate utilizzando la libreria
-\textbf{Swing} fornita di default dal linguaggio.\newline
-
-\iftrue
-
+\textbf{Swing} fornita di default dal linguaggio.
 \begin{figure}[!ht]
 	\centering
 	\includegraphics[scale=0.45,center]{core/imgs/UML/VistaBellaUML-noattr.png}
 	\caption{Diagramma delle Classi - Vista}
 	\label{figure:class_diagram_view}
 \end{figure}
-Come mostrato dal \textit{class diagram} in Figura
-\ref{figure:class_diagram_view} i
-\else
-I
-\fi
- 4 frame del gioco estendono da un'unica
-classe appositamente creata per fornire una veste grafica di default:
+Come mostrato dal \textit{class diagram} in Figura \ref{figure:class_diagram_view} 
+i 4 frame del gioco estendono un'unica
+classe astratta appositamente creata per fornire una veste grafica di default:
 l'\textit{AFrame}. Questo è essenzialmente un JFrame con un layout grafico
 prestabilito che fornisce metodi utili per l'aggiunta e la sostituzione dei
 pannelli che sono di volta in volta visualizzati. È qui che viene settato il
-nome del programma come titolo della finestra, l'icona del gioco e la posizione
-di comparsa sul display (al centro).\newline
+nome del programma come titolo della finestra, l'icona del gioco e la posizione sul display (al centro).\newline
 Così come per i frame, tutti i pannelli estendono da un'unica classe,
-l'\textit{APanel}. Anch'esso fornisce metodi per l'aggiunta dei vari oggetti che
-lo popoleranno (label, aree di testo, bottoni, ecc\dots). Ogni frame mantiene al
+l'\textit{APanel}. APanel fornisce anch'esso metodi per l'aggiunta dei vari oggetti che
+lo popoleranno (label, aree di testo, bottoni, etc). Ogni frame mantiene al
 proprio interno le istanze dei pannelli da mostrare.\newline
 Un pattern molto importante e particolarmente sfruttato nell'implementazione
 grafica di questo progetto è \textit{Observer}, il quale si basa su uno o più
 oggetti (osservatori o observer) che vengono registrati e notificati
-all'occorrenza di uno o più determinati eventi. Ogni pannello in grado di
+al verificarsi di determinate condizioni. Ogni pannello in grado di
 generare eventi ha associata un'interfaccia che fornisce i metodi che
 l'osservatore deve implementare per ricevere le notifiche. Dunque, ognuno dei 4
 frame si comporta da osservatore nei confronti dei pannelli usati, implementando
@@ -46,22 +38,27 @@ sottostanti. Il dialogo con la vista avviene dunque in due modi:
 
 
 \subsubsection{Main Frame}
-Il frame principale si compone di un unico pannello, il \textit{MainPanel}. Così
-come detto in fase di progettazione,
-%(Sezione \ref{subsubsection:progettazione_main_frame}) 
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=0.4]{core/imgs/gui/main_frame}
+	\caption{Main Frame}
+	\label{figure:main_frame}
+\end{figure}
+Il frame principale si compone di un unico pannello, il \textit{MainPanel} (Figura \ref{figure:main_frame}).
+Così come detto in fase di progettazione,
 questo frame ha il compito di
 permettere all'utente la scelta della modalità nella quale avviare il programma:
 se come server (lobby) o come client (game).\newline
 Per la comunicazione verso l'esterno, il MainPanel ha un'interfaccia associata
 che utilizza per notificare il MainFrame alla pressione dei bottoni ``Exit'' e
-``Start'' il quale, a sua volta, tramite l'observer \textit{MainFrameObserver}
+``Start'' il quale, a sua volta, tramite l'observer \textit{MainFrameObserver},
 notifca il \textit{Main}.
 
 
 
 \subsubsection{Lobby Frame}
 \begin{figure}[!h]
-	\begin{subfigure}{.5\textwidth}
+	\begin{subfigure}{0.5\textwidth}
 		\centering
 		\includegraphics[scale=0.4]{core/imgs/gui/lobby_frame}
 		\caption{Lobby Frame}
@@ -75,17 +72,17 @@ notifca il \textit{Main}.
 	\end{subfigure}
 	\caption{}
 \end{figure}
-Il \textit{LobbyFrame} si compone di 3 pannelli che vengono brevemente descritti di seguito. Il primo
+Il \textit{LobbyFrame} si compone di 3 pannelli, brevemente descritti in seguito. Il primo
 pannello permette agli utenti di scegliere il nome della stanza. Ha due bottoni,
 uno per l'uscita dal programma ed uno per l'avanzamento al pannello successivo.
 Il secondo mostra una gif per l'attesa di connessioni da parte dei client ed ha
 anch'esso un bottone di uscita. Il terzo ed ultimo pannello, visibile in Figura
 \ref{figure:lobby_frame}, viene mostrato automaticamente non appena un client si
-connette. Ospita due bottoni: uno per l'uscita dal programma ed uno per l'avvio
+connette. Ospita due pulsanti: uno per l'uscita dal programma ed uno per l'avvio
 della stanza.\newline
-Quando uno dei bottoni di uscita viene premuto, il frame viene notificato dalle
-funzioni usate dai pannelli per le notifiche e, a sua volta, propaga
-l'informazione verso il prorio osservatore (\textit{Lobby}) tramite i metodi
+Quando uno dei bottoni di uscita viene premuto, il frame viene notificato dai pannelli.
+Questo, a sua volta, propaga
+l'informazione verso il proprio osservatore (\textit{Lobby}) tramite i metodi
 forniti dall'interfaccia \textit{LobbyFrameObserver}. Lo stesso comportamento
 viene attuato alla pressione del pulsante ``Start''. L'azione sul bottone
 ``Next'', invece, non viene propagata all'esterno ma serve al frame per sapere
@@ -97,8 +94,8 @@ quando visualizzare il secondo pannello.
 Il \textit{RegistrationFrame} si compone invece di 7 pannelli.\newline
 Il comportamento di questo frame è del tutto simile a quello del LobbyFrame: gli
 eventi scatenati dai pulsanti per l'avanzamento della registrazione (``Next'' e
-``Previous'') sono usati internamente per la sostituzione dei vari pannelli
-mentre, le azioni sui bottoni ``Exit'' e ``Registration'' sono propagate dal
+``Previous'') sono usati internamente per la sostituzione dei vari pannelli,
+mentre le azioni sui bottoni ``Exit'' e ``Registration'' sono propagate dal
 frame verso il proprio osservatore (\textit{Battlesheep}) tramite l'interfaccia
 \textit{RegistrationFrameObserver}.\newline
 In Figura~\ref{figure:registration_frame} è mostrato il sesto pannello che
@@ -114,10 +111,10 @@ gioco e di registrarsi alla lobby.
 	\caption{Game Frame}
 	\label{figure:game_frame}
 \end{figure}
-Il \textit{GameFrame}, mostrato in Figura~\ref{figure:game_frame}, è anch'esso
-stato implementato secondo le specifiche progettuali descritte in precedenza.\newline
+Il \textit{GameFrame}, mostrato in Figura~\ref{figure:game_frame}, è stato anch'esso
+ implementato secondo le specifiche progettuali descritte in precedenza.\newline
 La classe \textit{Battlesheep} comunica con questo frame tramite i metodi che
-esso mette a disposizione principalmente per informarlo di come è tarminata la
+esso mette a disposizione, principalmente per informarlo di come è terminata la
 partita per l'utente, per gli altri giocatori e su come si sono conclusi i vari
 attacchi. Al contrario, il frame comunica con Battlesheep usando l'interfaccia
 \textit{GameFrameObserver} per comunicare la volontà da parte dell'utente di
